# fl0_test_service

./: Cargo.toml  Dockerfile
src/: main.rs
